--- a/src/_theme/geoscript/theme.conf
+++ b/src/_theme/geoscript/theme.conf
@@ -1,7 +1,7 @@
 [theme]
 inherit = sphinxdoc
 stylesheet = geoscript.css
-pygments_style = native
+pygments_style = friendly
 
 [options]
 nosidebar = false
