--- a/build.xml
+++ b/build.xml
@@ -7,16 +7,18 @@
         <echo message="Checks out GeoScript sources and builds the site. The built site is located in the build directory."/>
         <echo message=""/>
         <echo message="Available tasks:"/>
-        <echo message="${t}site:       Build the entire site."/>
-        <echo message="${t}js-doc:     Build the js docs (js-pull first)."/>
-        <echo message="${t}js-pull:    Update js repo."/>
-        <echo message="${t}py-doc:     Build the py docs (py-pull first)."/>
-        <echo message="${t}py-pull:    Update py repo."/>
-        <echo message="${t}scala-doc:  Build the scala docs (scala-pull first)."/>
-        <echo message="${t}scala-pull: Update scala repo."/>
-        <echo message="${t}init:       Check out local git repos."/>
-        <echo message="${t}clean:      Delete doc builds."/>
-        <echo message="${t}clean-full: Delete doc builds and local git repos."/>
+        <echo message="${t}site:        Build the entire site."/>
+        <echo message="${t}js-doc:      Build the js docs (js-pull first)."/>
+        <echo message="${t}js-pull:     Update js repo."/>
+        <echo message="${t}py-doc:      Build the py docs (py-pull first)."/>
+        <echo message="${t}py-pull:     Update py repo."/>
+        <echo message="${t}scala-doc:   Build the scala docs (scala-pull first)."/>
+        <echo message="${t}scala-pull:  Update scala repo."/>
+        <echo message="${t}groovy-doc:  Build the groovy docs (groovy-pull first)."/>
+        <echo message="${t}groovy-pull: Update groovy repo."/>
+        <echo message="${t}init:        Check out local git repos."/>
+        <echo message="${t}clean:       Delete doc builds."/>
+        <echo message="${t}clean-full:  Delete doc builds and local git repos."/>
     </target>
     
     <target name="init">
@@ -30,6 +32,9 @@
         </condition>
         <condition property="repo.scala.exists">
             <available file="${repos}/scala"/>
+        </condition>
+        <condition property="repo.groovy.exists">
+            <available file="${repos}/groovy"/>
         </condition>
     </target>
     
@@ -58,8 +63,8 @@
             <arg value="${repos}/js/doc/api/module.jst"/>
             <arg value="${repos}/js/doc/api"/>
         </exec>
-        <exec executable="sphinx-build" dir="${repos}/js/doc">
-            <arg line="-E -b html -c ${basedir}/src -D html_title='GeoScript JS' -D html_short_title='GeoScript JS' -D html_theme=geoscript-js . ${basedir}/build/js"/>
+        <exec executable="sphinx-build" dir="${basedir}/src">
+            <arg line="-E -b html -c ${basedir}/src -D html_title='GeoScript JS' -D html_short_title='GeoScript JS' -D html_theme=geoscript-js ${repos}/js/doc ${basedir}/build/js"/>
         </exec>
     </target>
     
@@ -82,8 +87,8 @@
     </target>
     
     <target name="py-doc" depends="init-py">
-        <exec executable="sphinx-build" dir="${repos}/py/doc">
-            <arg line="-E -b html . ${basedir}/build/py"/>
+        <exec executable="sphinx-build" dir="${basedir}/src">
+            <arg line="-E -b html ${repos}/py/doc ${basedir}/build/py"/>
         </exec>
     </target>
     
@@ -106,15 +111,49 @@
     </target>
     
     <target name="scala-doc" depends="init-scala">
-        <exec executable="sphinx-build" dir="${repos}/scala/docs">
-            <arg line="-E -b html -c ${basedir}/src -D html_title='GeoScript Scala' -D html_short_title='GeoScript Scala' -D html_theme=geoscript-scala . ${basedir}/build/scala"/>
+        <exec executable="sphinx-build" dir="${basedir}/src">
+            <arg line="-E -b html -c ${basedir}/src -D html_title='GeoScript Scala' -D html_short_title='GeoScript Scala' -D html_theme=geoscript-scala ${repos}/scala/docs ${basedir}/build/scala"/>
         </exec>
         <exec executable="sbt" dir="${repos}/scala/">
             <arg value="update"/>
             <arg value="doc"/>
         </exec>
-        <move file="${repos}/scala/geoscript/target/doc/main/api/" 
+        <move file="${repos}/scala/geoscript/target/scala_2.7.7/doc/main/api/"
             todir="${basedir}/build/scala/"/>
+    </target>
+
+    <target name="init-groovy" depends="init">
+        <antcall target="groovy-clone"/>
+    </target>
+
+    <target name="groovy-clone" unless="repo.groovy.exists">
+        <exec executable="git" dir="${repos}">
+            <arg value="clone"/>
+            <arg value="git://github.com/jericks/geoscript-groovy.git"/>
+            <arg value="groovy"/>
+        </exec>
+    </target>
+
+    <target name="groovy-pull" if="repo.groovy.exists" depends="init-groovy">
+        <exec executable="git" dir="${repos}/groovy">
+            <arg value="pull"/>
+        </exec>
+    </target>
+
+    <target name="groovy-doc" depends="init-groovy">
+        <exec executable="sphinx-build" dir="${basedir}/src">
+            <arg line="-E -b html -c ${basedir}/src -D html_title='GeoScript Groovy' -D html_short_title='GeoScript Groovy' -D html_theme=geoscript-groovy ${repos}/groovy/doc ${basedir}/build/groovy"/>
+        </exec>
+        <exec executable="mvn" dir="${repos}/groovy/">
+            <arg line="-Dmaven.test.skip=true"/>
+            <arg line="package"/>
+        </exec>
+        <mkdir dir="${basedir}/build/groovy/api"/>
+        <copy todir="${basedir}/build/groovy/api">
+            <fileset dir="${repos}/groovy/target/groovydoc/">
+                <include name="**/*"/>
+            </fileset>
+        </copy>
     </target>
 
     <target name="site-doc" depends="init">
@@ -123,7 +162,7 @@
         </exec>
     </target>  
     
-    <target name="site" depends="js-pull, js-doc, py-pull, py-doc, scala-pull, scala-doc, site-doc"/>
+    <target name="site" depends="js-pull, js-doc, py-pull, py-doc, scala-pull, scala-doc, groovy-pull, groovy-doc, site-doc"/>
     
     <target name="clean">
         <delete dir="${basedir}/build"/>
