--- a/src/_theme/geoscript-common/theme.conf
+++ b/src/_theme/geoscript-common/theme.conf
@@ -5,3 +5,8 @@ pygments_style = murphy
 
 [options]
 nosidebar = false
+impl_short = lang
+impl_long = Language
+impl_repo = user/geoscript-lang
+
+
